src/objects/Annuities__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Costs__c</fullName>
        <label>Additional Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_step_ups_automatic_or_manual__c</fullName>
        <label>Step-ups</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTOMATIC</fullName>
                    <default>true</default>
                    <label>AUTOMATIC</label>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_M_E_Admin_Charges__c</fullName>
        <label>Base M &amp; E &amp; Admin Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beneficiaries__c</fullName>
        <label>Beneficiaries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annuities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDSC_Schedule__c</fullName>
        <label>CDSC Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Annuities</relationshipLabel>
        <relationshipName>Annuities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Issue_Date__c</fullName>
        <label>Contract Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <externalId>true</externalId>
        <label>Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Owner_s__c</fullName>
        <label>Contract Owner(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type_Qualified_vs_Non__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Qualified vs. Non</inlineHelpText>
        <label>Contract Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Basis__c</fullName>
        <label>Cost Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Investment_Funds_Model_Name__c</fullName>
        <inlineHelpText>Funds/Model Names</inlineHelpText>
        <label>Current Investment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Investment_expenses__c</fullName>
        <label>Current Investment Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Death_Benefit_Calculation_Type__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Type</inlineHelpText>
        <label>Death Benefit Calculation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Benefit_Name__c</fullName>
        <externalId>true</externalId>
        <label>Death Benefit Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Benefit__c</fullName>
        <label>Description of Benefit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annuities</relationshipLabel>
        <relationshipName>Annuities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Yes_Amount__c</fullName>
        <label>If Yes….Amount?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_Yes_Date_Free_from_Surrender__c</fullName>
        <label>If Yes….Date Free from Surrender?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <externalId>true</externalId>
        <label>Insurance Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Phone__c</fullName>
        <label>Insurance Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Investment_Allocation_Restrictions__c</fullName>
        <label>Investment Allocation Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_an_age_at_which_the_minimum_dea__c</fullName>
        <description>Is there an age at which the minimum death benefit value would no longer be applicable?</description>
        <inlineHelpText>Is there an age at which the minimum death benefit value would no longer be applicable?</inlineHelpText>
        <label>Death Benefit Max Age</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annuities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Living_Benefit_Max_Age__c</fullName>
        <inlineHelpText>Age living benefit would stop accruing</inlineHelpText>
        <label>Living Benefit Max Age</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Benefit__c</fullName>
        <label>Name of Benefit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nursing_Home_Waiver_Benefit__c</fullName>
        <label>Nursing Home Waiver/Benefit?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Structure_Standard_Bonus_C_et__c</fullName>
        <inlineHelpText>Standard, Bonus, C etc.</inlineHelpText>
        <label>Pricing Structure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <externalId>true</externalId>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Variable, Fixed, etc.</inlineHelpText>
        <label>Product Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Features_Notes__c</fullName>
        <label>Special Features &amp; Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Surrender_Charges__c</fullName>
        <label>Surrender Charges?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Contract_Expenses__c</fullName>
        <label>Total Contract Expenses</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Insurance_Expenses__c</fullName>
        <label>Total Insurance Expenses</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Liquidations__c</fullName>
        <inlineHelpText>Total Withdrawals</inlineHelpText>
        <label>Total Liquidations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Premiums_Investments__c</fullName>
        <label>Total Premiums/Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>(GMIB, GMWB, GLWB, GMAB)</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Benefit__c</fullName>
        <label>Value of Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Investment_Changes_allowed_per_year__c</fullName>
        <inlineHelpText>Number</inlineHelpText>
        <label>Investment Changes Allowed/Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Annuity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Broker__c</columns>
        <columns>Contact__c</columns>
        <columns>Household__c</columns>
        <columns>Insurance_Company_Name__c</columns>
        <columns>Product_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annuities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>